# orca

./: Cargo.toml  docker-compose.yml
base/: Cargo.toml
base/src/: lib.rs
base/src/client/: conn.rs  mod.rs  redis.rs
base/src/client/database/: db.rs  mod.rs  session.rs
base/src/client/selenium/: mod.rs  session.rs
base/src/config/: key.rs
base/src/constant/: element.rs  mod.rs
base/src/error/: base.rs  mod.rs
base/src/server/context/: app.rs
base/src/utils/: uuid.rs
crates/libs/cerium/: Cargo.toml
crates/libs/cerium/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/src/core/: mod.rs
engine/src/core/test/: action.rs  case.rs  mod.rs
engine/src/server/context/: mod.rs
entity/src/: lib.rs  prelude.rs  test_action.rs  user.rs  user_session.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_seeding_user.rs  m20220101_000002_create_table.rs  m20220101_000002_seeding_test_data.rs
src/: main.rs
src/constant/: endpoint.rs  mod.rs  oauth.rs
src/constant/metadata/: environment.rs  mod.rs  user.rs
src/core/: env.rs  mod.rs
src/core/client/: mod.rs
src/core/config/: key.rs
src/core/constant/: header.rs
src/core/error/: base.rs  mod.rs
src/core/middleware/: error.rs
src/core/server/: mod.rs
src/core/utils/: macros.rs  mod.rs  uuid.rs
src/route/: action.rs  admin.rs  auth.rs  case.rs  mod.rs  profile.rs  table.rs
src/route/tst/: mod.rs
src/server/: authorize.rs  mod.rs
src/server/context/: request.rs
src/server/middleware/: request.rs
src/utils/: jwt.rs
(+11 files in other folders)
