[package]
name = "base"
version = "0.1.0"
edition = "2021"
description = "Orca is Automation Tool for testing framework that will help to automate the application testing faster"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
color-eyre = "0.6.2"


[dependencies]
http = "0.2.8"
log = "0.4.16"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.31"
jsonwebtoken = "8"
actix-web = "4.0.1"
config = "0.13.2"
lazy_static = "1.4.0"
thirtyfour = "0.30.0"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
sea-orm = { version = "0.8.0", default-features = true, features = [ "macros", "debug-print", "runtime-async-std-native-tls", "sqlx-postgres", "with-chrono"] }
